publishing awesome pages 1592208658893

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
 <section class="container">   
-    <div class="half-width">  
-       <h2> Welcome to <span class="red-color">Atharva Deshmukh's </span> World </h2>
+       <h2 class="head"> Wellcome to <span class="purple"> Atharva Deshmukh </span> World </h2>
+    <div class="half-width">   
        <h4 class="purple"> Devloper, Desiner, Marketer </h4>
        <p> I started with cutting the clothes, I mean <em>fasion designing </em>. Then I suddenly liked to make websites so I became <em>web developer. </em> Due to web devloper I can also make some online <em>marketing </em> as well </p>
       <a class="primary-btn" href="https://www.instagram.com/atharva.deshmukh.2366?r=nametag"> hire me </a>
