publishing awesome pages 1592213096857

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2> BIG DREAM </h2>
         <h4 class="purple"> To be an web devloper </h4> 
         <p> I had learn basic of <em> html & css </em>. I wold also like to be <em>fasion desiner. </em> </p>
-        <a class="primary-btn"href="www.gogle.com"> E-mail </a>
+        <a class="primary-btn"href="atharvadeshmukh2366@gmail.com"> E-mail </a>
   </div>
 </section>
 <section class="experience"> 
